Added info how to compile typescript files
Added info how to make the yeoman generated files compile since this is not clear for absolute beginners.

--- a/docs/01-installation.mdx
+++ b/docs/01-installation.mdx
@@ -86,6 +86,7 @@ yo @excaliburjs/excalibur
 ```
 
 The Yeoman generator will automatically create the appropriate package.json and bower.json files and install the needed dependencies for your project.
+You can compile the newly created typescript file with the ```npm start``` command.
 
 #### Raw Script Files via CDN or Download
 
